# Grafiki-automat

./: README.md  pyproject.toml  requirements.txt
scheduler/: __init__.py  __main__.py  calendar_pl.py  cli.py  constraints_hard.py  constraints_soft.py  demand.py  domain.py  export_excel.py  io_excel.py  report.py  solver.py
tests/: test_calendar_pl.py
