[project]
name = "scheduler"
version = "0.1.0"
description = "Bootstrap projektu grafiku TK/MR/ZDO."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Grafiki Automaty"}
]
dependencies = [
  "ortools",
  "pandas",
  "openpyxl",
  "pydantic",
  "python-dateutil",
]

[project.scripts]
scheduler = "scheduler.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
